String table: Update demo to List.of